<resources>
    <string name="app_name">ScreenMain</string>
    <string name="image_view_content_description">Main part images</string>
    <string name="image_view_content_description_element0">Image element 0</string>
    <string name="image_view_content_description_element1">Image element 1</string>
    <string name="image_view_content_description_element2">Image element 2</string>
    <string name="image_view_content_description_element3">Image element 3</string>
    <string name="image_view_content_description_element4">Image element 4</string>
</resources>
