<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/item_layout"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:id="@+id/itemImageView"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/image_view_content_description"/>



            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:contentDescription="@string/image_view_content_description_element0"
                       android:id="@+id/imageViewEl0"/>

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:contentDescription="@string/image_view_content_description_element1"
                       android:id="@+id/imageViewEl1"/>

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:contentDescription="@string/image_view_content_description_element2"
                       android:id="@+id/imageViewEl2"/>

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:contentDescription="@string/image_view_content_description_element3"
                       android:id="@+id/imageViewEl3"/>

            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:contentDescription="@string/image_view_content_description_element4"
                       android:id="@+id/imageViewEl4"/>


</FrameLayout>